--- a/templates/news-article/news-article.css
+++ b/templates/news-article/news-article.css
@@ -369,12 +369,6 @@ body.news-article main .section.details-sidebar.right .news-article-inner .defau
         width: 380px;
     }
 
-    body.news-article main .section.details-sidebar .news-article-inner {
-        position: relative;
-        max-width: 1200px;
-        margin: auto;
-    }
-
     body.news-article main .section.details-sidebar .news-article-inner .default-content-wrapper, body.news-article main .section.details-sidebar.right .news-article-inner .default-content-wrapper{
         width: calc(100% - 380px);
     }
@@ -399,11 +393,5 @@ body.news-article main .section.details-sidebar.right .news-article-inner .defau
     body.news-article main .section.articlecontent-container + div div.image-wrapper {
         margin-bottom: -90px;
         max-width: unset;
-    }
-
-    body.news-article main .section.details-sidebar .news-article-inner {
-        padding: 0 80px;
-        max-width: 1280px;
-        margin: auto;
     }
 }
