--- a/templates/project-article/project-article.css
+++ b/templates/project-article/project-article.css
@@ -157,12 +157,6 @@ body.biencommun main .section.details-sidebar h1 {
         margin: 0;
         padding: 80px 0;
     }
-
-    .project-article-template .details-sidebar .project-article-inner {
-        position: relative;
-        margin: auto;
-        max-width: 1200px;
-    }
 }
 
 @media (width >= 600px) and (width <= 1200px) {
